evaluatie LLVM/antlr_files/CParser.py
# Generated from ./C.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class CParser ( Parser ):

    grammarFileName = "C.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#include'", "'<stdio.h>'", "'char'", 
                     "'int'", "'float'", "'void'", "'bool'", "','", "';'", 
                     "'if'", "'else'", "'return'", "'while'", "'break'", 
                     "'continue'", "'for'", "'++'", "'--'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'", "'=='", "'!='", "'='", "'+='", "'-='", "'*='", 
                     "'/='", "<INVALID>", "<INVALID>", "<INVALID>", "'&'", 
                     "'>'", "'<'", "'>='", "'<='" ]

    symbolicNames = [ "<INVALID>", "INCLUDE", "STDIO_H", "CHAR", "INT", 
                      "FLOAT", "VOID", "BOOL", "COMMA", "SC", "IF", "ELSE", 
                      "RETURN", "WHILE", "BREAK", "CONTINUE", "FOR", "INCREMENT", 
                      "DECREMENT", "PLUS", "MINUS", "STAR", "DIVIDE", "MOD", 
                      "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", "RIGHT_BRACKET", 
                      "LEFT_BRACE", "RIGHT_BRACE", "EQUAL", "NOT_EQUAL", 
                      "ASSIGNMENT", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", 
                      "DIV_ASSIGN", "AND", "OR", "NOT", "AMPERSAND", "GREATER_THAN", 
                      "LESS_THAN", "GREATER_EQUAL_THAN", "LESS_EQUAL_THAN", 
                      "BOOL_CONSTANT", "INTEGER_CONSTANT", "FLOAT_CONSTANT", 
                      "CHAR_CONSTANT", "STRING_CONSTANT", "BLOCK_COMMENT", 
                      "LINE_COMMENT", "ID", "WS" ]

    RULE_program = 0
    RULE_top_level_node = 1
    RULE_include = 2
    RULE_declaration = 3
    RULE_declarator = 4
    RULE_param = 5
    RULE_func_def = 6
    RULE_statement = 7
    RULE_if_statement = 8
    RULE_iteration_statement = 9
    RULE_for_condition = 10
    RULE_compound_statement = 11
    RULE_block_item = 12
    RULE_jump_statement = 13
    RULE_expression_statement = 14
    RULE_expression = 15
    RULE_assignment_expr = 16
    RULE_assignment_operator = 17
    RULE_logical_or_expr = 18
    RULE_logical_and_expr = 19
    RULE_equality_expr = 20
    RULE_relational_expr = 21
    RULE_additive_expr = 22
    RULE_multiplicative_expr = 23
    RULE_cast_expr = 24
    RULE_unary_expr = 25
    RULE_unary_operator = 26
    RULE_postfix_expr = 27
    RULE_prim_expr = 28
    RULE_prim_type = 29
    RULE_type_int = 30
    RULE_type_float = 31
    RULE_type_char = 32
    RULE_type_void = 33
    RULE_type_bool = 34
    RULE_id_with_ptr = 35
    RULE_identifier = 36
    RULE_pointer = 37
    RULE_constant = 38
    RULE_int_constant = 39
    RULE_float_constant = 40
    RULE_str_constant = 41
    RULE_char_constant = 42
    RULE_bool_constant = 43

    ruleNames =  [ "program", "top_level_node", "include", "declaration", 
                   "declarator", "param", "func_def", "statement", "if_statement", 
                   "iteration_statement", "for_condition", "compound_statement", 
                   "block_item", "jump_statement", "expression_statement", 
                   "expression", "assignment_expr", "assignment_operator", 
                   "logical_or_expr", "logical_and_expr", "equality_expr", 
                   "relational_expr", "additive_expr", "multiplicative_expr", 
                   "cast_expr", "unary_expr", "unary_operator", "postfix_expr", 
                   "prim_expr", "prim_type", "type_int", "type_float", "type_char", 
                   "type_void", "type_bool", "id_with_ptr", "identifier", 
                   "pointer", "constant", "int_constant", "float_constant", 
                   "str_constant", "char_constant", "bool_constant" ]

    EOF = Token.EOF
    INCLUDE=1
    STDIO_H=2
    CHAR=3
    INT=4
    FLOAT=5
    VOID=6
    BOOL=7
    COMMA=8
    SC=9
    IF=10
    ELSE=11
    RETURN=12
    WHILE=13
    BREAK=14
    CONTINUE=15
    FOR=16
    INCREMENT=17
    DECREMENT=18
    PLUS=19
    MINUS=20
    STAR=21
    DIVIDE=22
    MOD=23
    LEFT_PAREN=24
    RIGHT_PAREN=25
    LEFT_BRACKET=26
    RIGHT_BRACKET=27
    LEFT_BRACE=28
    RIGHT_BRACE=29
    EQUAL=30
    NOT_EQUAL=31
    ASSIGNMENT=32
    ADD_ASSIGN=33
    SUB_ASSIGN=34
    MUL_ASSIGN=35
    DIV_ASSIGN=36
    AND=37
    OR=38
    NOT=39
    AMPERSAND=40
    GREATER_THAN=41
    LESS_THAN=42
    GREATER_EQUAL_THAN=43
    LESS_EQUAL_THAN=44
    BOOL_CONSTANT=45
    INTEGER_CONSTANT=46
    FLOAT_CONSTANT=47
    CHAR_CONSTANT=48
    STRING_CONSTANT=49
    BLOCK_COMMENT=50
    LINE_COMMENT=51
    ID=52
    WS=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CParser.EOF, 0)

        def top_level_node(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.Top_level_nodeContext)
            else:
                return self.getTypedRuleContext(CParser.Top_level_nodeContext,i)


        def getRuleIndex(self):
            return CParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 88
                self.top_level_node()
                self.state = 91 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.INCLUDE) | (1 << CParser.CHAR) | (1 << CParser.INT) | (1 << CParser.FLOAT) | (1 << CParser.VOID) | (1 << CParser.BOOL))) != 0)):
                    break

            self.state = 93
            self.match(CParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Top_level_nodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include(self):
            return self.getTypedRuleContext(CParser.IncludeContext,0)


        def declaration(self):
            return self.getTypedRuleContext(CParser.DeclarationContext,0)


        def SC(self):
            return self.getToken(CParser.SC, 0)

        def func_def(self):
            return self.getTypedRuleContext(CParser.Func_defContext,0)


        def getRuleIndex(self):
            return CParser.RULE_top_level_node

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTop_level_node" ):
                listener.enterTop_level_node(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTop_level_node" ):
                listener.exitTop_level_node(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTop_level_node" ):
                return visitor.visitTop_level_node(self)
            else:
                return visitor.visitChildren(self)




    def top_level_node(self):

        localctx = CParser.Top_level_nodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_top_level_node)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.include()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.declaration()
                self.state = 97
                self.match(CParser.SC)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.func_def()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCLUDE(self):
            return self.getToken(CParser.INCLUDE, 0)

        def STDIO_H(self):
            return self.getToken(CParser.STDIO_H, 0)

        def getRuleIndex(self):
            return CParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = CParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(CParser.INCLUDE)
            self.state = 103
            self.match(CParser.STDIO_H)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prim_type(self):
            return self.getTypedRuleContext(CParser.Prim_typeContext,0)


        def declarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.DeclaratorContext)
            else:
                return self.getTypedRuleContext(CParser.DeclaratorContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.COMMA)
            else:
                return self.getToken(CParser.COMMA, i)

        def getRuleIndex(self):
            return CParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = CParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.prim_type()
            self.state = 106
            self.declarator()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CParser.COMMA:
                self.state = 107
                self.match(CParser.COMMA)
                self.state = 108
                self.declarator()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaratorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CParser.RULE_declarator

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarDeclInitContext(DeclaratorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.DeclaratorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def id_with_ptr(self):
            return self.getTypedRuleContext(CParser.Id_with_ptrContext,0)

        def ASSIGNMENT(self):
            return self.getToken(CParser.ASSIGNMENT, 0)
        def assignment_expr(self):
            return self.getTypedRuleContext(CParser.Assignment_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclInit" ):
                listener.enterVarDeclInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclInit" ):
                listener.exitVarDeclInit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclInit" ):
                return visitor.visitVarDeclInit(self)
            else:
                return visitor.visitChildren(self)


    class VarDeclSimpleContext(DeclaratorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.DeclaratorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def id_with_ptr(self):
            return self.getTypedRuleContext(CParser.Id_with_ptrContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclSimple" ):
                listener.enterVarDeclSimple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclSimple" ):
                listener.exitVarDeclSimple(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclSimple" ):
                return visitor.visitVarDeclSimple(self)
            else:
                return visitor.visitChildren(self)


    class FuncDeclContext(DeclaratorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.DeclaratorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def id_with_ptr(self):
            return self.getTypedRuleContext(CParser.Id_with_ptrContext,0)

        def LEFT_PAREN(self):
            return self.getToken(CParser.LEFT_PAREN, 0)
        def RIGHT_PAREN(self):
            return self.getToken(CParser.RIGHT_PAREN, 0)
        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.ParamContext)
            else:
                return self.getTypedRuleContext(CParser.ParamContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.COMMA)
            else:
                return self.getToken(CParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)


    class VarDeclArrayContext(DeclaratorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CParser.DeclaratorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def id_with_ptr(self):
            return self.getTypedRuleContext(CParser.Id_with_ptrContext,0)

        def LEFT_BRACKET(self):
            return self.getToken(CParser.LEFT_BRACKET, 0)
        def assignment_expr(self):
            return self.getTypedRuleContext(CParser.Assignment_exprContext,0)

        def RIGHT_BRACKET(self):
            return self.getToken(CParser.RIGHT_BRACKET, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclArray" ):
                listener.enterVarDeclArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclArray" ):
                listener.exitVarDeclArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclArray" ):
                return visitor.visitVarDeclArray(self)
            else:
                return visitor.visitChildren(self)



    def declarator(self):

        localctx = CParser.DeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declarator)
        self._la = 0 # Token type
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = CParser.FuncDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.id_with_ptr()
                self.state = 115
                self.match(CParser.LEFT_PAREN)
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.CHAR) | (1 << CParser.INT) | (1 << CParser.FLOAT) | (1 << CParser.VOID) | (1 << CParser.BOOL))) != 0):
                    self.state = 116
                    self.param()
                    self.state = 121
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==CParser.COMMA:
                        self.state = 117
                        self.match(CParser.COMMA)
                        self.state = 118
                        self.param()
                        self.state = 123
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 126
                self.match(CParser.RIGHT_PAREN)
                pass

            elif la_ == 2:
                localctx = CParser.VarDeclSimpleContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.id_with_ptr()
                pass

            elif la_ == 3:
                localctx = CParser.VarDeclArrayContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.id_with_ptr()
                self.state = 130
                self.match(CParser.LEFT_BRACKET)
                self.state = 131
                self.assignment_expr()
                self.state = 132
                self.match(CParser.RIGHT_BRACKET)
                pass

            elif la_ == 4:
                localctx = CParser.VarDeclInitContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 134
                self.id_with_ptr()
                self.state = 135
                self.match(CParser.ASSIGNMENT)
                self.state = 136
                self.assignment_expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prim_type(self):
            return self.getTypedRuleContext(CParser.Prim_typeContext,0)


        def id_with_ptr(self):
            return self.getTypedRuleContext(CParser.Id_with_ptrContext,0)


        def getRuleIndex(self):
            return CParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = CParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.prim_type()
            self.state = 141
            self.id_with_ptr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prim_type(self):
            return self.getTypedRuleContext(CParser.Prim_typeContext,0)


        def id_with_ptr(self):
            return self.getTypedRuleContext(CParser.Id_with_ptrContext,0)


        def LEFT_PAREN(self):
            return self.getToken(CParser.LEFT_PAREN, 0)

        def RIGHT_PAREN(self):
            return self.getToken(CParser.RIGHT_PAREN, 0)

        def compound_statement(self):
            return self.getTypedRuleContext(CParser.Compound_statementContext,0)


        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.ParamContext)
            else:
                return self.getTypedRuleContext(CParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CParser.COMMA)
            else:
                return self.getToken(CParser.COMMA, i)

        def getRuleIndex(self):
            return CParser.RULE_func_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_def" ):
                listener.enterFunc_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_def" ):
                listener.exitFunc_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_def" ):
                return visitor.visitFunc_def(self)
            else:
                return visitor.visitChildren(self)




    def func_def(self):

        localctx = CParser.Func_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.prim_type()
            self.state = 144
            self.id_with_ptr()
            self.state = 145
            self.match(CParser.LEFT_PAREN)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CParser.CHAR) | (1 << CParser.INT) | (1 << CParser.FLOAT) | (1 << CParser.VOID) | (1 << CParser.BOOL))) != 0):
                self.state = 146
                self.param()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CParser.COMMA:
                    self.state = 147
                    self.match(CParser.COMMA)
                    self.state = 148
                    self.param()
                    self.state = 153
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 156
            self.match(CParser.RIGHT_PAREN)
            self.state = 157
            self.compound_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_statement(self):
            return self.getTypedRuleContext(CParser.If_statementContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(CParser.Compound_statementContext,0)


        def iteration_statement(self):
            return self.getTypedRuleContext(CParser.Iteration_statementContext,0)


        def expression_statement(self):
            return self.getTypedRuleContext(CParser.Expression_statementContext,0)


        def jump_statement(self):
            return self.getTypedRuleContext(CParser.Jump_statementContext,0)


        def getRuleIndex(self):
            return CParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        try:
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.if_statement()
                pass
            elif token in [CParser.LEFT_BRACE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.compound_statement()
                pass
            elif token in [CParser.WHILE, CParser.FOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 161
                self.iteration_statement()
                pass
            elif token in [CParser.SC, CParser.INCREMENT, CParser.DECREMENT, CParser.PLUS, CParser.MINUS, CParser.STAR, CParser.LEFT_PAREN, CParser.NOT, CParser.AMPERSAND, CParser.BOOL_CONSTANT, CParser.INTEGER_CONSTANT, CParser.FLOAT_CONSTANT, CParser.CHAR_CONSTANT, CParser.STRING_CONSTANT, CParser.ID]:
                self.enterOuterAlt(localctx, 4)
                self.state = 162
                self.expression_statement()
                pass
            elif token in [CParser.RETURN, CParser.BREAK, CParser.CONTINUE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 163
                self.jump_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CParser.IF, 0)
